@@ -1,3 +1,9 @@
+2008-02-10  Jeffrey Stedfast  <fejj@novell.com>
+
+	* README: Bumped version
+
+	* configure.in: Bumped version to 2.2.17
+
 2008-02-09  Jeffrey Stedfast  <fejj@novell.com>
 
 	* gmime/gmime-filter-basic.c (filter_filter): Use the new macros
